docs/new-structure_admin/2. установка и сопровождение/8. безопасность платформы/015-admission-policy-engine/charts/constraint-templates/tests/allow-privilege-escalation/test_suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: d8-allow-privilege-escalation
tests:
  - name: pod-security-standards-restricted
    template: ../../templates/security/allow-privilege-escalation.yaml
    constraint: constraint_pss_restricted.yaml
    cases:
      - name: example-allowed
        inventory:
          - ../common/test_samples/ns.yaml
        object: test_samples/pss_restricted/allowed.yaml
        assertions:
          - violations: no
      - name: example-disallowed
        inventory:
          - ../common/test_samples/ns.yaml
        object: test_samples/pss_restricted/disallowed.yaml
        assertions:
          - violations: yes
